--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,24 @@
   font-family: 'Readex Pro', sans-serif;
   margin: 0;
   padding: 0;
+  /* outline: 1px solid red; */
 }
 
 html {
   margin: 0;
   padding: 0;
 }
-hr{
+
+hr {
   margin-bottom: 25px;
 }
+
 h2 {
   font-style: italic;
 }
 
 .home {
-  margin-top: 25vh;
+  margin-top: 20vh;
 }
 
 .primary-button {
@@ -36,7 +39,7 @@ h2 {
 .primary-title {
   font-size: 90px;
   color: white;
-  margin-top: 30px
+
 }
 
 .primary-button:hover {
@@ -96,6 +99,7 @@ nav .logo-container {
 
 nav .logo-container .logo {
   width: 100%;
+
 }
 
 /* 
@@ -130,6 +134,7 @@ nav .logo-container .logo {
 
 .auth-modal .close-icon {
   float: right;
+  cursor: pointer;
 }
 
 .auth-modal form {
@@ -143,4 +148,85 @@ nav .logo-container .logo {
   padding: 8px;
   margin: 8px;
   font-size: 17px;
+}
+
+
+
+
+
+/* -------OnBoard--------- */
+.onboarding{
+  border-top: 1px solid grey;
+  
+}
+.onboarding h2{
+  margin-top: 2%;
+}
+.onboarding form {
+  display: flex;
+  justify-content: center;
+}
+
+.onboarding form section {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  justify-self: center;
+text-align: start;
+
+}
+
+.onboarding form input {
+  padding: 15px 30px;
+  margin: 10px 0;
+  font-size: 15px;
+  border: 2px solid rgb(235, 228, 228);
+  border-radius: 10px;
+
+}
+
+
+
+.onboarding form .multiple-input-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.onboarding form .multiple-input-container input {
+  margin-right: 10px;
+  width: 15%;
+}
+
+.onboarding form .multiple-input-container label {
+  padding: 10px;
+  border: 2px solid rgb(144, 144, 144);
+  border-radius: 10px;
+  transition: all 0.3s;
+  margin-right: 10px;
+
+}
+
+.onboarding form .multiple-input-container input[type='radio'] {
+  display: none;
+}
+
+.onboarding form label {
+  margin: 10px 0;
+}
+
+.onboarding form .multiple-input-container input[type='radio']:checked+label {
+  border: solid 2px rgb(221, 39, 22);
+}
+
+
+.onboarding form .multiple-input-container input[type='submit']:hover {
+  background-color: rgb(235, 235, 235);
+}
+
+.onboarding form .multiple-input-container input[type='submit']:active {
+  background-color: rgb(226, 115, 155);
+}
+
+.onboarding form .photo-container img{
+width: 100%;
 }
