--- a/src/index.css
+++ b/src/index.css
@@ -155,13 +155,15 @@ nav .logo-container .logo {
 
 
 /* -------OnBoard--------- */
-.onboarding{
+.onboarding {
   border-top: 1px solid grey;
-  
+
 }
-.onboarding h2{
+
+.onboarding h2 {
   margin-top: 2%;
 }
+
 .onboarding form {
   display: flex;
   justify-content: center;
@@ -172,7 +174,7 @@ nav .logo-container .logo {
   flex-direction: column;
   padding: 20px;
   justify-self: center;
-text-align: start;
+  text-align: start;
 
 }
 
@@ -227,6 +229,142 @@ text-align: start;
   background-color: rgb(226, 115, 155);
 }
 
-.onboarding form .photo-container img{
-width: 100%;
+.onboarding form .photo-container img {
+  width: 100%;
+}
+
+
+
+/* ------DashBoard--------------- */
+
+.dashboard {
+  display: flex;
+  justify-content: space-between;
+}
+
+.dashboard .swiper-container {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.swipe {
+  position: absolute;
+}
+
+.card-container {
+
+  width: 400px;
+  height: 650px;
+}
+
+.card {
+
+  background-color: #fff;
+  width: 400px;
+  height: 600px;
+  /* box-shadow: 0px 0px 60px 0px rgba(0, 0, 0, 0.30); */
+  border-radius: 20px;
+  background-size: cover;
+  background-position: center;
+}
+
+.cardContent {
+  width: 100%;
+  height: 100%;
+}
+
+.swipe:last-of-type {}
+
+
+.dashboard .swipe-info {
+  position: absolute;
+  bottom: 0;
+  padding: 5px;
+}
+
+.card h3 {
+  margin-top: 0;
+  color: #fff;
+}
+
+.dashboard .swipe-info {
+  bottom: 0;
+  position: absolute;
+  padding: 10px;
+}
+
+
+
+/* -------ChatContainer----------- */
+.chat-container {
+  box-shadow: rgba(0, 0, 0, 0.5) 0 6px 24px 0px, rgba(0, 0, 0, 0.08) 0 0 0 1px;
+  width: 30%;
+  text-align: left;
+}
+
+.chat-input {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-container .chat-container-header {
+  background: linear-gradient(45deg, rgb(254, 48, 114), rgb(255, 89, 64));
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.chat-container .option {
+  border: none;
+  background-color: white;
+  border-bottom: solid 4px rgb(243, 33, 33);
+  font-size: 20px;
+  margin: 2px;
+  padding: 10px;
+
+}
+
+.chat-container .option:disabled {
+  border-bottom: solid 4px grey;
+}
+
+.chat-container .profile {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.chat-container .log-out-icon {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.image-container {
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+  overflow: hidden;
+  margin: 10px;
+}
+
+.image-container img {
+  width: 100%;
+}
+
+
+/* ------Chat Display--------- */
+
+.chat-display {
+  padding: 20px;
+  height: 60vh;
+  overflow-y: auto;
 }
