--- a/client/src/index.css
+++ b/client/src/index.css
@@ -228,10 +228,12 @@ nav .logo-container .logo {
 .onboarding form .multiple-input-container input[type='submit']:active {
   background-color: rgb(226, 115, 155);
 }
+
 .onboarding form .photo-container {
   width: 300px;
   height: 600px;
 }
+
 .onboarding form .photo-container img {
   width: 100%;
 }
@@ -352,8 +354,8 @@ nav .logo-container .logo {
 }
 
 .image-container {
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   border-radius: 15px;
   overflow: hidden;
   margin: 10px;
@@ -361,6 +363,7 @@ nav .logo-container .logo {
 
 .image-container img {
   width: 100%;
+  height: 100%;
 }
 
 
