--- a/client/src/index.css
+++ b/client/src/index.css
@@ -369,8 +369,14 @@ nav .logo-container .logo {
 
 /* ------Chat Display--------- */
 
+
 .chat-display {
   padding: 20px;
   height: 60vh;
   overflow-y: auto;
+}
+
+.chat-display .img-container-image {
+  width: 100px;
+  height: 100px;
 }
